--- a/HandyHyatt/Base.lproj/Main.storyboard
+++ b/HandyHyatt/Base.lproj/Main.storyboard
@@ -691,8 +691,8 @@
                         <rect key="frame" x="0.0" y="0.0" width="1024" height="768"/>
                         <autoresizingMask key="autoresizingMask" flexibleMaxX="YES" flexibleMaxY="YES"/>
                         <subviews>
-                            <imageView userInteractionEnabled="NO" contentMode="scaleToFill" horizontalHuggingPriority="251" verticalHuggingPriority="251" ambiguous="YES" misplaced="YES" translatesAutoresizingMaskIntoConstraints="NO" id="mNi-Jx-2vx">
-                                <rect key="frame" x="0.0" y="0.0" width="1024" height="704"/>
+                            <imageView userInteractionEnabled="NO" contentMode="scaleToFill" horizontalHuggingPriority="251" verticalHuggingPriority="251" fixedFrame="YES" translatesAutoresizingMaskIntoConstraints="NO" id="mNi-Jx-2vx">
+                                <rect key="frame" x="0.0" y="64" width="1024" height="704"/>
                             </imageView>
                             <imageView userInteractionEnabled="NO" contentMode="scaleAspectFit" horizontalHuggingPriority="251" verticalHuggingPriority="251" fixedFrame="YES" image="Content_DividerLine_Gray.png" translatesAutoresizingMaskIntoConstraints="NO" id="IZO-vu-fND">
                                 <rect key="frame" x="450" y="64" width="22" height="55"/>
@@ -756,11 +756,6 @@
                             </button>
                         </subviews>
                         <color key="backgroundColor" white="1" alpha="1" colorSpace="custom" customColorSpace="calibratedWhite"/>
-                        <constraints>
-                            <constraint firstItem="mNi-Jx-2vx" firstAttribute="width" secondItem="OkI-Jb-b8a" secondAttribute="width" id="82f-az-uCC"/>
-                            <constraint firstItem="mNi-Jx-2vx" firstAttribute="height" secondItem="OkI-Jb-b8a" secondAttribute="height" id="LAS-fg-KN1"/>
-                            <constraint firstAttribute="centerX" secondItem="mNi-Jx-2vx" secondAttribute="centerX" constant="392" id="iru-b7-lcd"/>
-                        </constraints>
                     </view>
                     <navigationItem key="navigationItem" id="xll-ix-hoP">
                         <nil key="title"/>
@@ -792,13 +787,6 @@
                                 <fontDescription key="fontDescription" type="system" pointSize="24"/>
                                 <nil key="highlightedColor"/>
                             </label>
-                            <textView clipsSubviews="YES" multipleTouchEnabled="YES" contentMode="scaleToFill" fixedFrame="YES" translatesAutoresizingMaskIntoConstraints="NO" id="aQY-b1-460">
-                                <color key="backgroundColor" white="1" alpha="1" colorSpace="calibratedWhite"/>
-                                <string key="text">Lorem ipsum dolor sit er elit lamet, consectetaur cillium adipisicing pecu, sed do eiusmod tempor incididunt ut labore et dolore magna aliqua. Ut enim ad minim veniam, quis nostrud exercitation ullamco laboris nisi ut aliquip ex ea commodo consequat. Duis aute irure dolor in reprehenderit in voluptate velit esse cillum dolore eu fugiat nulla pariatur. Excepteur sint occaecat cupidatat non proident, sunt in culpa qui officia deserunt mollit anim id est laborum. Nam liber te conscient to factor tum poen legum odioque civiuda.</string>
-                                <color key="textColor" red="0.50196078431372548" green="0.50980392156862742" blue="0.51764705882352935" alpha="1" colorSpace="calibratedRGB"/>
-                                <fontDescription key="fontDescription" name="Verdana" family="Verdana" pointSize="21"/>
-                                <textInputTraits key="textInputTraits" autocapitalizationType="sentences"/>
-                            </textView>
                             <imageView userInteractionEnabled="NO" contentMode="scaleToFill" horizontalHuggingPriority="251" verticalHuggingPriority="251" fixedFrame="YES" image="Content_HeaderLine.png" translatesAutoresizingMaskIntoConstraints="NO" id="8wc-Jz-rUG">
                                 <rect key="frame" x="20" y="150" width="984" height="5"/>
                             </imageView>
@@ -873,7 +861,7 @@
                     <simulatedOrientationMetrics key="simulatedOrientationMetrics" orientation="landscapeRight"/>
                     <connections>
                         <outlet property="completionTime" destination="Jjx-k1-ohl" id="Dsf-P4-4Fq"/>
-                        <outlet property="desc" destination="aQY-b1-460" id="yPq-dP-zoJ"/>
+                        <outlet property="desc" destination="x57-t3-MY9" id="hH9-J6-vAA"/>
                         <outlet property="subtitle" destination="Min-Wv-eOn" id="Buw-fa-SSt"/>
                         <outlet property="tasktitle" destination="j6W-AW-VR8" id="gTJ-GV-xet"/>
                     </connections>
